# chunky

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/chunky/: __init__.py  __main__.py  entry.py  process.py
tests/: test_chunky.py
